                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-06-2005 fixed: incorrect channel mapping for 6 channel ogg files when using paplayer
 - 27-06-2005 fixed: Black screen when paused in hardware overlays.
 - 27-06-2005 fixed: Movie information wasn't enabled in db views.
 - 27-06-2005 fixed: upper case MP3/AAC extensions weren't read correctly.
 - 27-06-2005 fixed: Very long file names reading from smb could crash.
 - 26-06-2005 fixed: HttpApi:PlayNext and PlayPrev commands
 - 26-06-2005 changed: HttpApi: GUISetting boolean now returns "true" and "false" rather than "1" and "0"
 - 26-06-2005 added: HttpApi: TakeScreenShot command
 - 25-06-2005 changed: weather gfx now prerarred in media/weather.rar, Build.bat updated
 - 25-06-2005 changed: Moved weather logo into the skin.
 - 25-06-2005 fixed: Small navigation issue with Thumbpanels.
 - 25-06-2005 added: Next/Prev picture works when zoomed in.  Slideshow mode needs a rewrite - zooming is unpredictable at best in slideshow mode.  Pays to pause before zooming.
 - 25-06-2005 fixed: MACDll.dll had paths limited to 259 characters.
 - 25-06-2005 fixed: 6 ch AAC playback with PAPlayer would crash/play slowly.
 - 25-06-2005 added: hidden setting to alter the background colour during video playback (see settings.xml, tag is <BlackBarColour> - this specifies the greyscale value used.)
 - 24-06-2005 fixed: Small width anim-gif loading crash.
 - 24-06-2005 fixed: wav header parsing in wavcodec is incorrect
 - 24-06-2005 fixed: Small issue in FileHD (reading of weather .rar file triggered it)
 - 24-06-2005 fixed: Transistion on press of left/right in my pictures faded incorrectly.